[lab-supervised-learning-sklearn] Alfonso Román

--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -502,8 +502,8 @@
    "metadata": {},
    "source": [
     "* El F-score es 43.16. La hipótesis nula sí se rechaza, porque el pvalue es del orden de e-58\n",
-    "* Según el t-test también se rechaza la hipótesis nula para la constante y las variables x2, x3, x4 y x9\n",
-    "* Eliminaría las variables en el modelo que he señalado arriba, ya que tienen coeficiente 0"
+    "* Según el t-test también se rechaza la hipótesis nula para la constante en cuyo intervalo de confianza esté el 0, es decir, las variables x1, x5, x6, x7, x8 y x10\n",
+    "* Eliminaría las variables en el modelo que he señalado arriba."
    ]
   },
   {
