lab-intro-to-ml

--- a/module-3/lab-intro-to-ml/your-code/main.ipynb
+++ b/module-3/lab-intro-to-ml/your-code/main.ipynb
@@ -1821,7 +1821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -1830,14 +1830,14 @@
        "1056"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import math\n",
-    "ts_rows = austin_fixed[:math.ceil(len(austin_fixed.index)*0.8)]\n",
+    "ts_rows = austin_fixed[:math.ceil(len(austin_fixed)*0.8)]\n",
     "ts_rows.shape[0]"
    ]
   },
