--- a/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
+++ b/module-3/lab-supervised-learning-sklearn/your-code/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,8 @@
     "import sklearn\n",
     "from sklearn.datasets import load_diabetes\n",
     "from sklearn.linear_model import LinearRegression\n",
-    "from sklearn.model_selection import train_test_split"
+    "from sklearn.model_selection import train_test_split\n",
+    "import statsmodels.api as sm"
    ]
   },
   {
@@ -44,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
        "dict_keys(['data', 'target', 'DESCR', 'feature_names', 'data_filename', 'target_filename'])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +196,7 @@
        "(442,)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +217,7 @@
        "(442, 10)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +297,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,16 +314,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "151.62646728587657\n",
-      "[  -4.30005498 -246.80916313  519.22260983  321.28539919 -890.07239259\n",
-      "  538.49941105  145.54964356  176.1817425   801.36747289   48.57022286]\n"
+      "152.21339761744085\n",
+      "[ 1.63592471e-01 -2.30652316e+02  5.17522091e+02  3.17045881e+02\n",
+      " -7.44871364e+02  4.51469170e+02  4.90222089e+01  1.40615005e+02\n",
+      "  7.27606020e+02  6.64691463e+01]\n"
      ]
     }
    ],
@@ -352,27 +354,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([137.35369106, 115.87997878, 155.75607259, 234.45177547,\n",
-       "       197.66824363, 212.90771595,  63.43014541, 208.08701461,\n",
-       "       235.02952191,  89.42321848, 178.05204974, 110.59568817,\n",
-       "       170.60828224, 262.63867921, 161.24178887,  70.49345785,\n",
-       "       155.9469993 , 250.30147306, 230.58112635, 220.45161767])"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Your code here:\n",
-    "diabetes_model.predict(diabetes_data_test)"
+    "diabetes_predicted = diabetes_model.predict(diabetes_data_test)"
    ]
   },
   {
@@ -384,28 +371,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import mean_squared_error, r2_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/miniconda3/envs/ironhack/lib/python3.7/site-packages/ipykernel_launcher.py:2: DeprecationWarning: elementwise comparison failed; this will raise an error in the future.\n",
-      "  \n"
+      "Mean squared error: 2056.49\n",
+      "Variance score: 0.63\n"
      ]
     }
    ],
    "source": [
-    "# Your code here:\n",
-    "print(diabetes_target_test==diabetes_data_test)"
+    "print(\"Mean squared error: %.2f\"\n",
+    "      % mean_squared_error(diabetes_target_test, diabetes_predicted))\n",
+    "# Explained variance score: 1 is perfect prediction\n",
+    "print('Variance score: %.2f' % r2_score(diabetes_target_test, diabetes_predicted))"
    ]
   },
   {
@@ -421,7 +412,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your explanation here:\n"
+    "# No, tiene un error de 0.63"
    ]
   },
   {
@@ -460,7 +451,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here:\n"
+    "# Your code here:\n",
+    "\n"
    ]
   },
   {
