--- a/module-3/lab-supervised-learning-feature-extraction/your-code/Pandas-concat-merge-join.ipynb
+++ b/module-3/lab-supervised-learning-feature-extraction/your-code/Pandas-concat-merge-join.ipynb
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1059,6 +1059,9 @@
        "      <th>A</th>\n",
        "      <th>B</th>\n",
        "      <th>C</th>\n",
+       "      <th>D</th>\n",
+       "      <th>E</th>\n",
+       "      <th>F</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1067,59 +1070,78 @@
        "      <td>a0</td>\n",
        "      <td>b0</td>\n",
        "      <td>c0</td>\n",
+       "      <td>d0</td>\n",
+       "      <td>e0</td>\n",
+       "      <td>f0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>a1</td>\n",
        "      <td>b1</td>\n",
        "      <td>c1</td>\n",
+       "      <td>d1</td>\n",
+       "      <td>e1</td>\n",
+       "      <td>f1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>a2</td>\n",
        "      <td>b2</td>\n",
        "      <td>c2</td>\n",
+       "      <td>d2</td>\n",
+       "      <td>e2</td>\n",
+       "      <td>f2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>a3</td>\n",
        "      <td>b3</td>\n",
        "      <td>c3</td>\n",
+       "      <td>d3</td>\n",
+       "      <td>e3</td>\n",
+       "      <td>f3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>a4</td>\n",
        "      <td>b4</td>\n",
        "      <td>c4</td>\n",
+       "      <td>d4</td>\n",
+       "      <td>e4</td>\n",
+       "      <td>f4</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>a5</td>\n",
        "      <td>b5</td>\n",
        "      <td>c5</td>\n",
+       "      <td>d5</td>\n",
+       "      <td>e5</td>\n",
+       "      <td>f5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    A   B   C\n",
-       "0  a0  b0  c0\n",
-       "1  a1  b1  c1\n",
-       "2  a2  b2  c2\n",
-       "3  a3  b3  c3\n",
-       "4  a4  b4  c4\n",
-       "5  a5  b5  c5"
+       "    A   B   C   D   E   F\n",
+       "0  a0  b0  c0  d0  e0  f0\n",
+       "1  a1  b1  c1  d1  e1  f1\n",
+       "2  a2  b2  c2  d2  e2  f2\n",
+       "3  a3  b3  c3  d3  e3  f3\n",
+       "4  a4  b4  c4  d4  e4  f4\n",
+       "5  a5  b5  c5  d5  e5  f5"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Your code here\n",
-    "concat1= pd.concat([pd.concat([df1, df2]),pd.concat([df3, df4])], "
+    "concat1= pd.concat([pd.concat([df1, df2]),pd.concat([df3, df4])], axis=1)\n",
+    "concat1"
    ]
   },
   {
